--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \usepackage{hyperref}
 \usepackage{amssymb}
 \usepackage[12pt]{extsizes}
+\usepackage{epigraph}
 % Title Page
 \title{Мой диплом}
 \author{Волков Сергей}
