begin of crawlers comparision

--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,7 @@
 \usepackage{amssymb}
 \usepackage[12pt]{extsizes}
 \usepackage{epigraph}
+\usepackage{fixme}
 % Title Page
 \title{Мой диплом}
 \author{Волков Сергей}
