--- a/main.tex
+++ b/main.tex
@@ -19,9 +19,9 @@
 \end{abstract}
 
 \include{chapters/introduction}
-\include{chapters/main1}
-\include{chapters/main2}
-\include{chapters/conclusion}
+%\include{chapters/main1}
+%\include{chapters/main2}
+%\include{chapters/conclusion}
 
 \begin{thebibliography}{9}
 \bibitem{pimenov} Пименов Александр, \href{http://mmcg.z52.ru/drupal/node/3}{Hadoop Nutch и Lucene v3}, 2009.
