minor koznov fixes

--- a/main.tex
+++ b/main.tex
@@ -8,15 +8,15 @@
 \usepackage{epigraph}
 \usepackage{fixme}
 % Title Page
-\title{Мой диплом}
+\title{Разработка алгоритмов обеспечения качества распределенного поисковго робота для сети Интернет}
 \author{Волков Сергей}
 
 
 \begin{document}
 \maketitle
 
-\begin{abstract}
-\end{abstract}
+% \begin{abstract}
+% \end{abstract}
 
 \include{chapters/introduction}
 %\include{chapters/main1}
