--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,8 @@
 \usepackage[12pt]{extsizes}
 \usepackage{epigraph}
 \usepackage{fixme}
+\usepackage{rotating}
+\usepackage{amsmath}
 % Title Page
 \title{Разработка алгоритмов обеспечения качества распределенного поисковго робота для сети Интернет}
 \author{Волков Сергей}
@@ -24,6 +26,7 @@
 %\include{chapters/conclusion}
 
 \begin{thebibliography}{9}
+\bibitem{googlemr} Jeffrey Dean and Sanjay Ghemawat: MapReduce: Simplified Data Processing on Large Clusters, 2004.
 \bibitem{pimenov} Пименов Александр, \href{http://mmcg.z52.ru/drupal/node/3}{Hadoop Nutch и Lucene v3}, 2009.
 \bibitem{nutchbib} D Cutting, Nutch: an Open-Source Platform for Web Search
 \bibitem{lucene} E Hatcher, O Gospodnetic, Lucene in action
