Добавлено сырое описание hdfs

--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,8 @@
 
 \begin{thebibliography}{9}
 \bibitem{googlemr} Jeffrey Dean and Sanjay Ghemawat: MapReduce: Simplified Data Processing on Large Clusters, 2004.
+\bibitem{hadoopdefguide} Tom White: Hadoop: The Definitive Guide, 2009
+\bibitem{gfs} Sanjay Ghemawat, Howard Gobioff, and Shun-Tak Leung: The Google File System, 2003.
 \bibitem{pimenov} Пименов Александр, \href{http://mmcg.z52.ru/drupal/node/3}{Hadoop Nutch и Lucene v3}, 2009.
 \bibitem{nutchbib} D Cutting, Nutch: an Open-Source Platform for Web Search
 \bibitem{lucene} E Hatcher, O Gospodnetic, Lucene in action
