Описание стандартного скоринга

--- a/main.tex
+++ b/main.tex
@@ -11,9 +11,9 @@
 \usepackage{amsmath}
 \usepackage{hyperref}
 
-% \usepackage[12pt]{extsizes}
-% \usepackage[left=3cm,right=2cm,top=2cm,bottom=2cm]{geometry}
-% \renewcommand{\baselinestretch}{1.5}
+\usepackage[12pt]{extsizes}
+\usepackage[left=3cm,right=2cm,top=2cm,bottom=2cm]{geometry}
+\renewcommand{\baselinestretch}{1.5}
 
 % Title Page
 \title{Разработка алгоритмов обеспечения качества распределенного поисковго робота для сети Интернет}
