Всякая ерунда которую я отправлю как черновик

--- a/main.tex
+++ b/main.tex
@@ -22,14 +22,16 @@
 
 \begin{document}
 \maketitle
+\tableofcontents
 
+% \makeindex
 % \begin{abstract}
 % \end{abstract}
 
 \include{chapters/introduction}
 \include{chapters/main1}
-%\include{chapters/main2}
-%\include{chapters/conclusion}
+\include{chapters/main2}
+\include{chapters/conclusion}
 
 \begin{thebibliography}{9}
 \bibitem{crawl} Junghoo Cho, Hector Garcia-Molina, Lawrence Page: Efficient Crawling Through URL Ordering, 1998.
