--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,67 @@
 \author{Волков Сергей}
 
 
+
 \begin{document}
+\begin{titlepage}
+\begin{center}
+
+\textsc{САНКТ-ПЕТЕРБУРГСКИЙ ГОСУДАРСТВЕННЫЙ УНИВЕРСИТЕТ}\\
+\textsc{Математико-механический факультет}\\[1.0cm]
+
+\textsc{Кафедра системного программирования}\\[3.0cm]
+
+{ \LARGE Разработка алгоритмов обеспечения качества}\\[1.0cm]
+{ \LARGE распределенного поискового робота}\\[1.0cm]
+{ \LARGE для сети интернет}\\[1.0cm]
+{Дипломная работа студента 545 группы \\ Волкова Сергея Андреевича}\\[3.0cm]
+
+\begin{tabular}{lcr}
+Научный руководитель & ……………… & ассистент кафедры АСОИУ СПбГЭТУ ЛЭТИ\\ & & Выговский Л.С \\
+& /подпись/ & \\[1.0cm]
+Рецензент            & ……………… & ст.преп. Луцив Д.В \\
+& /подпись/ & \\[1.0cm]
+``Допустить к защите'' & ……………… & д.ф.-м.н., проф. Терехов А.Н. \\
+заведующий кафедрой, & /подпись/ & \\
+\end{tabular}
+
+\vfill
+
+{\large Санкт-Петербург \\ 2011}
+
+\end{center}
+\end{titlepage}
+
+\begin{titlepage}
+\begin{center}
+\begin{otherlanguage}{english}
+
+\textsc{SAINT PETERSBURG STATE UNIVERSITY}\\
+\textsc{Mathematics \& Mechanics Faculty}\\[1.0cm]
+
+\textsc{Software Engineering}\\[3.0cm]
+
+{ \LARGE Development of quality assurance algorithms}\\[1.0cm]
+
+{ \LARGE for the distributed web crawler}\\[1.0cm]
+
+{by \\ Sergey Volkov \\ Master’s thesis}\\[3.0cm]
+
+\begin{tabular}{lcr}
+Supervisor & ……………… & L.S Vygovsky \\[1.0cm]
+Reviewer            & ……………… & Senior Lect. D.V Luciv\\[1.0cm]
+``Approved by'' & ……………… & Professor A. N. Terekhov\\
+Head of Department, & & \\
+\end{tabular}
+
+\vfill
+
+{\large Saint Petersburg \\ 2011}
+
+\end{otherlanguage}
+\end{center}
+\end{titlepage}
+
 \maketitle
 \tableofcontents
 
