Поправлен introduction.tex

--- a/main.tex
+++ b/main.tex
@@ -7,12 +7,14 @@
 \usepackage[12pt]{extsizes}
 \usepackage{epigraph}
 \usepackage{fixme}
-\usepackage{rotating}
+
 \usepackage{amsmath}
 \usepackage{hyperref}
 
 \usepackage[12pt]{extsizes}
+\usepackage{cmap}
 \usepackage[left=3cm,right=2cm,top=2cm,bottom=2cm]{geometry}
+\usepackage{rotating}
 \renewcommand{\baselinestretch}{1.5}
 
 % Title Page
