Изменения согласно замечаниям

--- a/main.tex
+++ b/main.tex
@@ -2,10 +2,13 @@
 \usepackage[utf8x]{inputenc}
 \usepackage[english,russian]{babel} 
 \usepackage{graphicx}
+% \usepackage{cm-super}
+\usepackage[T1]{fontenc}
 
 \usepackage{amssymb}
 \usepackage[12pt]{extsizes}
 \usepackage{epigraph}
+\usepackage{longtable}
 \usepackage{fixme}
 
 \usepackage{amsmath}
