Десятичная точка исправлена на запятую, небольшие изменения

--- a/main.tex
+++ b/main.tex
@@ -106,7 +106,7 @@ Head of Department, & & \\
 \bibitem{focused} Martin Ester, Matthias Groß, Hans-Peter Kriegel: Focused Web Crawling: A Generic Framework for Specifying the User Interest and for Adaptive Crawling Strategies, 2001.
 
 \bibitem{opic} Serge Abiteboul, Mihai Preda, Grégory Cobena: Adaptive On-Line Page Importance Computation, 2003
-\bibitem{pimenov} Пименов Александр, \href{http://mmcg.z52.ru/drupal/node/3}{Hadoop Nutch и Lucene v3}, 2009.
+\bibitem{pimenov} Пименов Александр, Hadoop Nutch и Lucene v3 \href{http://mmcg.z52.ru/drupal/node/3}{http://mmcg.z52.ru/drupal/node/3}, 2009.
 \bibitem{nutchbib} D Cutting, Nutch: an Open-Source Platform for Web Search
 \bibitem{lucene} E Hatcher, O Gospodnetic, Lucene in action
 \bibitem{nutchscore} R Khare, D Cutting, K Sitaker, A Rifkin, Nutch: A flexible and scalable open-source web search engine
