Поправлен титульный лист

--- a/main.tex
+++ b/main.tex
@@ -41,9 +41,9 @@
 {Дипломная работа студента 545 группы \\ Волкова Сергея Андреевича}\\[3.0cm]
 
 \begin{tabular}{lcr}
-Научный руководитель & ……………… & ассистент кафедры АСОИУ СПбГЭТУ ЛЭТИ\\ & & Выговский Л.С \\
+Научный руководитель & ……………… & ассистент кафедры АСОИУ СПбГЭТУ ЛЭТИ\\ & & Выговский Л.С. \\
 & /подпись/ & \\[1.0cm]
-Рецензент            & ……………… & ст.преп. Луцив Д.В \\
+Рецензент            & ……………… & ст.преп. Луцив Д.В. \\
 & /подпись/ & \\[1.0cm]
 ``Допустить к защите'' & ……………… & д.ф.-м.н., проф. Терехов А.Н. \\
 заведующий кафедрой, & /подпись/ & \\
@@ -72,8 +72,8 @@
 {by \\ Sergey Volkov \\ Master’s thesis}\\[3.0cm]
 
 \begin{tabular}{lcr}
-Supervisor & ……………… & L.S Vygovsky \\[1.0cm]
-Reviewer            & ……………… & Senior Lect. D.V Luciv\\[1.0cm]
+Supervisor & ……………… & L. S. Vygovsky \\[1.0cm]
+Reviewer            & ……………… & Senior Lect. D. V. Luciv\\[1.0cm]
 ``Approved by'' & ……………… & Professor A. N. Terekhov\\
 Head of Department, & & \\
 \end{tabular}
