--- a/main.tex
+++ b/main.tex
@@ -60,16 +60,16 @@
 \begin{center}
 \begin{otherlanguage}{english}
 
-\textsc{SAINT PETERSBURG STATE UNIVERSITY}\\
+\textsc{Saint-Petersburg State University}\\
 \textsc{Mathematics \& Mechanics Faculty}\\[1.0cm]
 
-\textsc{Software Engineering}\\[3.0cm]
+\textsc{Software Engineering Department}\\[3.0cm]
 
 { \LARGE Development of quality assurance algorithms}\\[1.0cm]
 
 { \LARGE for the distributed web crawler}\\[1.0cm]
 
-{by \\ Sergey Volkov \\ Master’s thesis}\\[3.0cm]
+{Graduate paper by \\ Sergey Volkov \\ 545 group}\\[3.0cm]
 
 \begin{tabular}{lcr}
 Supervisor & ……………… & L. S. Vygovsky \\[1.0cm]
@@ -80,7 +80,7 @@ Head of Department, & & \\
 
 \vfill
 
-{\large Saint Petersburg \\ 2011}
+{\large Saint-Petersburg \\ 2011}
 
 \end{otherlanguage}
 \end{center}
@@ -99,18 +99,16 @@ Head of Department, & & \\
 \include{chapters/conclusion}
 
 \begin{thebibliography}{9}
-\bibitem{crawl} Junghoo Cho, Hector Garcia-Molina, Lawrence Page: Efficient Crawling Through URL Ordering, 1998.
-\bibitem{googlemr} Jeffrey Dean and Sanjay Ghemawat: MapReduce: Simplified Data Processing on Large Clusters, 2004.
-\bibitem{hadoopdefguide} Tom White: Hadoop: The Definitive Guide, 2009
-\bibitem{gfs} Sanjay Ghemawat, Howard Gobioff, and Shun-Tak Leung: The Google File System, 2003.
-\bibitem{focused} Martin Ester, Matthias Groß, Hans-Peter Kriegel: Focused Web Crawling: A Generic Framework for Specifying the User Interest and for Adaptive Crawling Strategies, 2001.
-
-\bibitem{opic} Serge Abiteboul, Mihai Preda, Grégory Cobena: Adaptive On-Line Page Importance Computation, 2003
-\bibitem{pimenov} Пименов Александр, Hadoop Nutch и Lucene v3 \href{http://mmcg.z52.ru/drupal/node/3}{http://mmcg.z52.ru/drupal/node/3}, 2009.
-\bibitem{nutchbib} D Cutting, Nutch: an Open-Source Platform for Web Search
-\bibitem{lucene} E Hatcher, O Gospodnetic, Lucene in action
-\bibitem{nutchscore} R Khare, D Cutting, K Sitaker, A Rifkin, Nutch: A flexible and scalable open-source web search engine
-\bibitem{hadoop} T White, Hadoop: The Definitive Guide
+\bibitem{nutchbib} D. Cutting. Building Nutch: Open Source Search // Queue. Vol. 2. Issue. 2. ACM. 2004. P. 54-61.
+\bibitem{lucene} E. Hatcher, O. Gospodnetic. Lucene in action. Mamming Publications Co. 2010. P. 14-35.
+\bibitem{googlemr} Jeffrey Dean and Sanjay Ghemawat. MapReduce: Simplified Data Processing on Large Clusters // Commun. ACM. Vol. 51. Issue. 1. ACM. 2008. P. 107-113.
+\bibitem{crawl} Junghoo Cho, Hector Garcia-Molina, Lawrence Page. Efficient Crawling Through URL Ordering // Computer Networks and ISDN Systems. Vol. 30, Issue. 1-7. 1998. P. 161-172.
+\bibitem{focused} Martin Ester, Matthias Groß, Hans-Peter Kriegel. Focused Web Crawling: A Generic Framework for Specifying the User Interest and for Adaptive Crawling Strategies. 2001. \href{http://en.scientificcommons.org/42716041}{http://en.scientificcommons.org/42716041}
+\bibitem{nutchscore} R. Khare, D. Cutting, K. Sitaker, A. Rifkin, Nutch. A flexible and scalable open-source web search engine. \href{http://www.netseven.it/master/files/262-Nutch.pdf}{http://www.netseven.it/master/files/262-Nutch.pdf}
+\bibitem{gfs} Sanjay Ghemawat, Howard Gobioff, and Shun-Tak Leung. The Google File System // Proceedings of the nineteenth ACM symposium on Operating systems principles. ACM. 2003. P. 29-43.
+\bibitem{opic} Serge Abiteboul, Mihai Preda, Grégory Cobena. Adaptive On-Line Page Importance Computation // Proceedings of the 12th international conference on World Wide Web. ACM. 2003. P. 280-290.
+\bibitem{hadoopdefguide} Tom White. Hadoop: The Definitive Guide. O'Reilly Media. 2009. P. 15-75.
+\bibitem{pimenov} Пименов Александр. Hadoop Nutch и Lucene v3. 2009. \href{http://mmcg.z52.ru/drupal/node/3}{http://mmcg.z52.ru/drupal/node/3}
 
 \end{thebibliography}
 
