--- a/main.tex
+++ b/main.tex
@@ -41,7 +41,7 @@
 {Дипломная работа студента 545 группы \\ Волкова Сергея Андреевича}\\[3.0cm]
 
 \begin{tabular}{lcr}
-Научный руководитель & ……………… & ассистент кафедры АСОИУ СПбГЭТУ ЛЭТИ\\ & & Выговский Л.С. \\
+Научный руководитель & ……………… & асс. каф. АСОИУ СПбГЭТУ ЛЭТИ\\ & & Выговский Л.С. \\
 & /подпись/ & \\[1.0cm]
 Рецензент            & ……………… & ст.преп. Луцив Д.В. \\
 & /подпись/ & \\[1.0cm]
@@ -72,7 +72,7 @@
 {Graduate paper by \\ Sergey Volkov \\ 545 group}\\[3.0cm]
 
 \begin{tabular}{lcr}
-Supervisor & ……………… & L. S. Vygovsky \\[1.0cm]
+Supervisor & ……………… & Assistant Lect. L. S. Vygovsky \\[1.0cm]
 Reviewer            & ……………… & Senior Lect. D. V. Luciv\\[1.0cm]
 ``Approved by'' & ……………… & Professor A. N. Terekhov\\
 Head of Department, & & \\
