--- a/main.tex
+++ b/main.tex
@@ -100,14 +100,19 @@ Head of Department, & & \\
 
 \begin{thebibliography}{9}
 \bibitem{nutchbib} D. Cutting. Building Nutch: Open Source Search // Queue. Vol. 2. Issue. 2. ACM. 2004. P. 54-61.
+\bibitem{crawldbbib} D Cutting. Scalable computing with Hadoop. 2006. \href{http://opendocs.net/apache/hadoop/yahoo-sds.pdf}{http://opendocs.net/apache/hadoop/yahoo-sds.pdf}
 \bibitem{lucene} E. Hatcher, O. Gospodnetic. Lucene in action. Mamming Publications Co. 2010. P. 14-35.
 \bibitem{googlemr} Jeffrey Dean and Sanjay Ghemawat. MapReduce: Simplified Data Processing on Large Clusters // Commun. ACM. Vol. 51. Issue. 1. ACM. 2008. P. 107-113.
 \bibitem{crawl} Junghoo Cho, Hector Garcia-Molina, Lawrence Page. Efficient Crawling Through URL Ordering // Computer Networks and ISDN Systems. Vol. 30, Issue. 1-7. 1998. P. 161-172.
+\bibitem{nutchcase} M. Michael, J. E. Moreira, D. Shiloach, R. W. Wisniewski. Scale-up x Scale-out: A Case Study using Nutch/Lucene // Parallel and Distributed Processing Symposium. IPDPS 2007. IEEE International. 2007. P. 1-8.
 \bibitem{focused} Martin Ester, Matthias Groß, Hans-Peter Kriegel. Focused Web Crawling: A Generic Framework for Specifying the User Interest and for Adaptive Crawling Strategies. 2001. \href{http://en.scientificcommons.org/42716041}{http://en.scientificcommons.org/42716041}
 \bibitem{nutchscore} R. Khare, D. Cutting, K. Sitaker, A. Rifkin, Nutch. A flexible and scalable open-source web search engine. \href{http://www.netseven.it/master/files/262-Nutch.pdf}{http://www.netseven.it/master/files/262-Nutch.pdf}
 \bibitem{gfs} Sanjay Ghemawat, Howard Gobioff, and Shun-Tak Leung. The Google File System // Proceedings of the nineteenth ACM symposium on Operating systems principles. ACM. 2003. P. 29-43.
 \bibitem{opic} Serge Abiteboul, Mihai Preda, Grégory Cobena. Adaptive On-Line Page Importance Computation // Proceedings of the 12th international conference on World Wide Web. ACM. 2003. P. 280-290.
 \bibitem{hadoopdefguide} Tom White. Hadoop: The Definitive Guide. O'Reilly Media. 2009. P. 15-75.
+\bibitem{luceneimp} Yong Zhang, Jian-lin Li. Research and Improvement of Search Engine Based on Lucene. // Intelligent Human-Machine Systems and Cybernetics, IHMSC '09. International Conference. 2009. P. 270-273.
+\bibitem{mrmine} Zaki M.J., Yu J.X., Ravindran B., Pudi, V. Advances in Knowledge Discovery and Data Mining, Part II // 14th Pacific-Asia Conference. PAKDD 2010. Springer. 2010. P 84-93. 
+\bibitem{blinkov} Блинков Иван. Архитектура Twitter. Два года спустя. 2011. \href{http://www.insight-it.ru/masshtabiruemost/arkhitektura-twitter-dva-goda-spustya/}{http://www.insight-it.ru/masshtabiruemost/arkhitektura-twitter-dva-goda-spustya/}
 \bibitem{pimenov} Пименов Александр. Hadoop Nutch и Lucene v3. 2009. \href{http://mmcg.z52.ru/drupal/node/3}{http://mmcg.z52.ru/drupal/node/3}
 
 \end{thebibliography}
